# lego

./: .gitignore  README.org  docker-compose.yml  notes.org
backend/: Dockerfile  go.mod  main.go
documents/: thing.html
frontend/: Cargo.toml  Dockerfile  container_start_script.sh  index.html  rust-toolchain.toml  trunk.toml
frontend/src/: components.rs  main.rs  style.rs  utils.rs
frontend/src/style/: theme.rs
frontend/styles/: style.css
homepage/: index.html
