[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos_router =  {version= "0.3.0" , features=["csr"]}
leptos = "0.3.0"



#log
log = "0.4"
wasm-logger = "0.2.0"
reqwasm = "0.5.0"
serde ={version="1",features=["derive"]}
web-sys = "0.3.63"

